--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,28 @@
 .fl-block {
   float: left;
 }
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 1272px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.mb20-block {
+  margin-bottom: 20px;
+}
+.mb30-block {
+  margin-bottom: 30px;
+}
+.mb40-block {
+  margin-bottom: 40px;
+}
+.mb50-block {
+  margin-bottom: 50px;
+}
+.mb100-block {
+  margin-bottom: 100px;
+}
